--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "*.{ts,tsx}": "eslint --fix"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.7.0",
+    "chart.js": "^3.5.1",
     "next": "11.1.2",
     "next-themes": "0.0.15",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^3.0.4",
+    "react-circular-progressbar": "^2.0.4",
+    "react-dom": "17.0.2",
+    "react-loader-spinner": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
