--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-chartjs-2": "^3.0.4",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
-    "react-loader-spinner": "^4.0.0"
+    "react-loader-spinner": "^4.0.0",
+    "swr": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
