--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^3.5.1",
     "next": "11.1.2",
     "next-themes": "0.0.15",
+    "nprogress": "^0.2.0",
     "papaparse": "^5.3.1",
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.4",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
+    "@types/nprogress": "^0.2.0",
     "@types/papaparse": "^5.2.6",
     "@types/react": "17.0.19",
     "@types/react-dom": "^17.0.9",
