--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nprogress": "^0.2.0",
     "papaparse": "^5.3.1",
     "react": "17.0.2",
+    "react-canvas-confetti": "^1.2.1",
     "react-chartjs-2": "^3.0.4",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
